feat: adding base funcitonality for SCD data bases (#1)
* Exporting code from NGC

* feat: changing line_length_linter to 120 char

* feat: udpdating DESRIPTION with NGC version

* fix: OS independent fix to printr

* test: If we cannot connect to a DB, that connection is skipped

* test: warnings if only SQLite backend changed to message

* feat: exporting db_timestamp

* docs: removing "mg::" from links

* test: removed NGC only test

* test: changed how conn_drv is pulled from conn_list

* feat: exporting db_timestamp S3 method

* feat: removing covid_functions.R

* chore: resolving build notes, lints, etc.

* feat: removing add_age_group from package

* feat: removing zzz.R from package

* feat: removing age aggregators from package

* test: enabling is.historical test

* test: fixing db_maintenance test

* feat: adding url to package

* feat: resolving lints and removing duplicated functions

* feat: adding a logo

* feat: removing printing helpers from package

* feat: un-exporting assertion helpers

* feat: resolving checks

* feat: updarting NEWS

* feat: adding document and test-coverage workflows

* test: resolving binding issue in setup.R

* fix: fixed package version to 0.1

* test: fixed issues in test_connection + removed test for age manipulator

* feat: minor improvement to logo

* test: restructuring the last db_maintenance tests

* fix: fixing several uncaught renaming of mg to SCDB

* fix: Fixed db_timestamp mishandling POSIXt objects

* test: renaming test to "test-" format

* chore: Title Case in Title

* docs: Call get_connection() in example

* chore: fixed example and updated docs

* test: adding more OS to R-CMD-check workflow

---------

Co-authored-by: Marcus Munch Grünewald <MMGR@SSI.dk>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,45 @@
 Package: SCDB
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: GPL (>= 3)
+Type: Package
+Title: Easily Access and Maintain Time-Based Versioned Data (Slowly-Changing-Dimension)
+Version: 0.1
+Authors@R:
+	  c(person("Rasmus Skytte", "Randløv", , "rske@ssi.dk",
+	           role = c("aut", "cre"),
+	           comment = c(ORCID = "0000-0002-5860-3838")),
+	    person("Marcus Munch", "Grünewald", , "mmgr@ssi.dk",
+	           role = c("aut"),
+	           comment = c(ORCID = "0009-0006-8090-406X")))
+Maintainer: Rasmus Skytte Randløv <rske@ssi.dk>
+Description: This package contains scripts for easily accessing and updating a database of data over time.
+License: GPL-3
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Suggests: 
-    spelling
+Roxygen: list(markdown = TRUE, r6 = TRUE)
+Depends:
+    tidyverse,
+    dbplyr,
+    lubridate
+Imports:
+    checkmate,
+    DBI,
+    dplyr,
+    glue,
+    magrittr,
+    methods,
+    openssl,
+    purrr,
+    rlang,
+    stringr,
+    tidyr,
+    tidyselect,
+    utils
+Suggests:
+    RPostgres,
+    RSQLite,
+    roxygen2,
+    spelling,
+    testthat (>= 3.0.0),
+    tibble
 Language: en-US
 URL: https://rasmusskytte.github.io/SCDB/
+Config/testthat/edition: 3
