fix: ensure proper import of RSQLite

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(semi_join)
 export(slice_time)
 export(table_exists)
 export(update_snapshot)
+import(RSQLite)
 import(dbplyr)
 import(lubridate)
 import(tidyverse)
