Reformat reference in description (fix #19)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,9 @@ Authors@R:
 	           comment = c(ORCID = "0009-0006-8090-406X")))
 Maintainer: Rasmus Skytte Randløv <rske@ssi.dk>
 Description: A collection of functions that enable easy access and updating of a database of data over time.
-             More specifically, the package facilitates type-2 history[1] for data-warehouses and provides a number
-             of Quality of life improvements for working on SQL databases with R.\cr
-             [1] see Ralph Kimball and Margy Ross (2013, ISBN 9781118530801).
+             More specifically, the package facilitates type-2 history for data-warehouses and provides a number
+             of Quality of life improvements for working on SQL databases with R.
+             For reference see Ralph Kimball and Margy Ross (2013, ISBN 9781118530801).
 License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.2.3
