fix(test-coverage): more verbosely create schema

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Create schema "test" in PostgreSQL
         run: |
-          psql -c "CREATE SCHEMA test;"
+          psql SCDB_test -c "CREATE SCHEMA test;"
 
       - name: Test coverage
         run: |
