fix(test-coverage): move definition of environment vars

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -8,6 +8,13 @@ on:
 
 name: test-coverage
 
+env:
+  PGHOST: localhost
+  PGPORT: 5432
+  PGDATABSE: SCDB_test
+  PGUSER: postgres
+  PGPASSWORD: postgres
+
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
@@ -25,11 +32,6 @@ jobs:
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      PGHOST: localhost
-      PGPORT: 5432
-      PGDATABSE: SCDB_test
-      PGUSER: postgres
-      PGPASSWORD: postgres
 
     steps:
       - uses: actions/checkout@v3
