chore: specify R6 import (#40)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ import(dbplyr)
 import(lubridate)
 import(tidyverse)
 import(utils)
+importFrom(R6,R6Class)
 importFrom(methods,setGeneric)
 importFrom(rlang,.data)
 importFrom(rlang,`:=`)
