--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Type: Package
 Title: Easily Access and Maintain Time-Based Versioned Data (Slowly-Changing-Dimension)
 Version: 0.2
 Authors@R:
-	  c(person("Rasmus Skytte", "Randløv", , "rske@ssi.dk",
+	  c(person("Rasmus Skytte", "Randl\U00F8v", , "rske@ssi.dk",
 	           role = c("aut", "cre"),
 	           comment = c(ORCID = "0000-0002-5860-3838")),
-	    person("Marcus Munch", "Grünewald", , "mmgr@ssi.dk",
+	    person("Marcus Munch", "Gr\U00FCnewald", , "mmgr@ssi.dk",
 	           role = c("aut"),
 	           comment = c(ORCID = "0009-0006-8090-406X")))
 Maintainer: Rasmus Skytte Randløv <rske@ssi.dk>
