--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -73,4 +73,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pkgdown-output
-          path: ${{ runner.temp }}/package
+          path: ${{ runner.temp }}/*
