--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -54,8 +54,27 @@ jobs:
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
 
+      - name: Upload output to artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pkgdown-output
+          path: docs/
+
+  deploy:
+    name: Deploy to GitHub pages 🚀
+    runs-on: ubuntu-latest
+    if: ${{ (github.repository == 'ssi-dk/SCDB') && (github.event_name == 'release') }}
+    needs: cleanup
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download pkgdown output artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: pkgdown
+          path: docs
+
       - name: Deploy to GitHub pages 🚀
-        if: github.event_name != 'pull_request'
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           clean: false
