--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Upload output to artifact
         uses: actions/upload-artifact@v3
         with:
-          name: pkgdown-output
+          name: pkgdown
           path: docs/
 
   deploy:
