--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,15 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: main
+    paths: |
+      - 'R/**'
+      - 'tests/**'
   pull_request:
-    branches: [main, master]
+    branches: main
+    paths: |
+      - 'R/**'
+      - 'tests/**'
 
 name: R-CMD-check
 
