--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,11 +6,15 @@ on:
     paths: |
       - 'R/**'
       - 'tests/**'
+      - 'man/**'
+      - 'vignettes/**'
   pull_request:
     branches: main
     paths: |
       - 'R/**'
       - 'tests/**'
+      - 'man/**'
+      - 'vignettes/**'
 
 name: R-CMD-check
 
