fix(R-CMD-check): Fix quoting preventing workflows triggering

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,17 +4,12 @@ on:
   push:
     branches: main
     paths: |
-      - 'R/**'
-      - 'tests/**'
-      - 'man/**'
-      - 'vignettes/**'
+      - R/**
+      - tests/**
+      - man/**
+      - vignettes/**
   pull_request:
     branches: main
-    paths: |
-      - 'R/**'
-      - 'tests/**'
-      - 'man/**'
-      - 'vignettes/**'
 
 name: R-CMD-check
 
