chore(R-CMD-check): Update name string for hard check

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -60,7 +60,7 @@ jobs:
   R-CMD-check-hard:
     runs-on: ubuntu-latest
 
-    name: ubuntu-latest (release)
+    name: ubuntu-latest (release, no dependencies)
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
