chore(render-svg): Resize logo.png

--- a/.github/workflows/render-svg.yaml
+++ b/.github/workflows/render-svg.yaml
@@ -32,7 +32,7 @@ jobs:
           image_read_svg(svg_path) |>
             image_crop("100%x50%") |>
             image_trim() |>
-            image_resize("x250") |>
+            image_resize("240x278") |>
             image_write("man/figures/logo.png")
 
         shell: Rscript {0}
