feat(sqlite_schema): Rework `get_schema` and `table_exists` to S3 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,16 @@
 S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
+S3method(get_schema,PqConnection)
+S3method(get_schema,SQLiteConnection)
+S3method(get_schema,default)
 S3method(get_tables,SQLiteConnection)
 S3method(get_tables,default)
 S3method(schema_exists,PqConnection)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
+S3method(table_exists,SQLiteConnection)
+S3method(table_exists,default)
 S3method(tidyr::unite,tbl_dbi)
 export("%notin%")
 export(Logger)
