--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(get_schema,SQLiteConnection)
 S3method(get_schema,tbl_dbi)
 S3method(get_tables,SQLiteConnection)
 S3method(get_tables,default)
+S3method(id,character)
+S3method(id,tbl_dbi)
 S3method(schema_exists,PqConnection)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
