feat: Add `get_tables.PqConnection`
chore: Remove SQLite-specific functions from `get_tables.default`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_schema,Id)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
 S3method(get_schema,tbl_dbi)
+S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
 S3method(get_tables,default)
 S3method(id,character)
