feat: Add compatibility for catalog in `id`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,5 +52,6 @@ import(tidyverse)
 import(utils)
 importFrom(R6,R6Class)
 importFrom(methods,setGeneric)
+importFrom(rlang,"%||%")
 importFrom(rlang,.data)
 importFrom(rlang,`:=`)
