feat: add `get_tables` for MSSQL and ODBC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ S3method(get_schema,Id)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
 S3method(get_schema,tbl_dbi)
+S3method(get_tables,"Microsoft SQL Server")
 S3method(get_tables,DBIConnection)
+S3method(get_tables,OdbcConnection)
 S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
 S3method(id,character)
