fix: Convert `*_join`s to `dplyr::*_join` methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,14 @@
 S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
+S3method(dplyr::anti_join,tbl_sql)
+S3method(dplyr::full_join,tbl_sql)
+S3method(dplyr::inner_join,tbl_sql)
+S3method(dplyr::left_join,tbl_sql)
+S3method(dplyr::right_join,tbl_sql)
+S3method(dplyr::semi_join,tbl_sql)
+S3method(filter_keys,data.frame)
+S3method(filter_keys,tbl_sql)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
@@ -24,27 +32,21 @@ S3method(table_exists,SQLiteConnection)
 S3method(tidyr::unite,tbl_dbi)
 export("%notin%")
 export(Logger)
-export(anti_join)
 export(close_connection)
 export(create_logs_if_missing)
 export(create_table)
 export(db_timestamp)
 export(digest_to_checksum)
 export(filter_keys)
-export(full_join)
 export(get_connection)
 export(get_schema)
 export(get_table)
 export(get_tables)
 export(id)
-export(inner_join)
 export(interlace_sql)
 export(is.historical)
-export(left_join)
 export(nrow)
-export(right_join)
 export(schema_exists)
-export(semi_join)
 export(slice_time)
 export(table_exists)
 export(update_snapshot)
