fix: promote `schema_exists.PqConnection` to `DBIConnection`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
 S3method(id,character)
 S3method(id,tbl_dbi)
-S3method(schema_exists,PqConnection)
+S3method(schema_exists,DBIConnection)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
 S3method(table_exists,DBIConnection)
