--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,9 @@ Imports:
     utils
 Suggests:
     conflicted,
+    jsonlite,
     knitr,
+    odbc,
     rmarkdown,
     RPostgres,
     roxygen2,
