fix: Add `:=` import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,4 +57,5 @@ import(tidyverse)
 import(utils)
 importFrom(R6,R6Class)
 importFrom(methods,setGeneric)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
