feat(r-license-report): adjust triggering

--- a/.github/workflows/r-license-report.yaml
+++ b/.github/workflows/r-license-report.yaml
@@ -5,9 +5,10 @@ name: License Report
 
 on:
   push:
-    branches: [rc-*]
+    branches: [main, rc-*]
   pull_request:
-    branches: [rc-*]
+    branches: [main, rc-*]
+    workflow_call:
 
 jobs:
   license-report:
