--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(close_connection)
 export(create_logs_if_missing)
 export(create_table)
 export(db_timestamp)
+export(defer_db_cleanup)
 export(digest_to_checksum)
 export(filter_keys)
 export(get_catalog)
