feat: add function to generate unique table names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(nrow)
 export(schema_exists)
 export(slice_time)
 export(table_exists)
+export(unique_table_name)
 export(update_snapshot)
 import(RSQLite)
 import(dbplyr)
