--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(get_tables,DBIConnection)
 S3method(get_tables,OdbcConnection)
 S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
+S3method(id,Id)
 S3method(id,character)
 S3method(id,tbl_dbi)
 S3method(schema_exists,DBIConnection)
