feat(get_catalog): add function to determine catalog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,10 @@ S3method(dplyr::right_join,tbl_sql)
 S3method(dplyr::semi_join,tbl_sql)
 S3method(filter_keys,data.frame)
 S3method(filter_keys,tbl_sql)
+S3method(get_catalog,"Microsoft SQL Server")
+S3method(get_catalog,Id)
+S3method(get_catalog,default)
+S3method(get_catalog,tbl_dbi)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
@@ -39,6 +43,7 @@ export(create_table)
 export(db_timestamp)
 export(digest_to_checksum)
 export(filter_keys)
+export(get_catalog)
 export(get_connection)
 export(get_schema)
 export(get_table)
