--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(as.character,Id)
 S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
+S3method(digest_to_checksum,data.frame)
+S3method(digest_to_checksum,default)
+S3method(digest_to_checksum,tbl_PqConnection)
 S3method(dplyr::anti_join,tbl_sql)
 S3method(dplyr::full_join,tbl_sql)
 S3method(dplyr::inner_join,tbl_sql)
