feat(locks): Delete locks with orphaned PIDs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(update_snapshot)
 import(RSQLite)
 import(dbplyr)
 import(lubridate)
+import(parallelly)
 import(tidyverse)
 importFrom(R6,R6Class)
 importFrom(methods,setGeneric)
