feat(locks): export lock functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ S3method(table_exists,DBIConnection)
 S3method(tidyr::unite,tbl_dbi)
 export(Logger)
 export(LoggerNull)
+export(add_table_lock)
 export(close_connection)
 export(create_logs_if_missing)
 export(create_table)
@@ -55,7 +56,10 @@ export(get_tables)
 export(id)
 export(interlace_sql)
 export(is.historical)
+export(is_lock_owner)
 export(nrow)
+export(remove_expired_locks)
+export(remove_table_lock)
 export(schema_exists)
 export(slice_time)
 export(table_exists)
