feat(Logger): Refactor into LoggerConsole, Logger, LoggeNull

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,8 @@ S3method(schema_exists,default)
 S3method(table_exists,DBIConnection)
 S3method(tidyr::unite,tbl_dbi)
 export(Logger)
-export(NullLogger)
+export(LoggerConsole)
+export(LoggerNull)
 export(close_connection)
 export(create_logs_if_missing)
 export(create_table)
