--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
 S3method(id,Id)
 S3method(id,character)
+S3method(id,data.frame)
 S3method(id,tbl_dbi)
 S3method(schema_exists,DBIConnection)
 S3method(schema_exists,SQLiteConnection)
