--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(get_tables,SQLiteConnection)
 S3method(id,Id)
 S3method(id,character)
 S3method(id,tbl_dbi)
+S3method(interlace,tbl_sql)
 S3method(schema_exists,DBIConnection)
 S3method(schema_exists,SQLiteConnection)
 S3method(schema_exists,default)
@@ -53,7 +54,7 @@ export(get_schema)
 export(get_table)
 export(get_tables)
 export(id)
-export(interlace_sql)
+export(interlace)
 export(is.historical)
 export(nrow)
 export(schema_exists)
