feat(locks): Refactor to lock_table and unlock_table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,6 @@ S3method(table_exists,DBIConnection)
 S3method(tidyr::unite,tbl_dbi)
 export(Logger)
 export(LoggerNull)
-export(add_table_lock)
 export(close_connection)
 export(create_logs_if_missing)
 export(create_table)
@@ -56,13 +55,13 @@ export(get_tables)
 export(id)
 export(interlace_sql)
 export(is.historical)
-export(is_lock_owner)
+export(lock_table)
 export(nrow)
-export(remove_table_lock)
 export(schema_exists)
 export(slice_time)
 export(table_exists)
 export(unique_table_name)
+export(unlock_table)
 export(update_snapshot)
 import(RSQLite)
 import(dbplyr)
