fix(interlace_sql): Add deprecation warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(get_table)
 export(get_tables)
 export(id)
 export(interlace)
+export(interlace_sql)
 export(is.historical)
 export(lock_table)
 export(nrow)
