--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -36,6 +36,7 @@ reference:
     - joins
     - unite.tbl_dbi
     - interlace
+    - interlace_sql
 
   - title:  Query table information
     contents:
