feat(get_connection): Convert to S3 generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,11 @@ S3method(get_catalog,"Microsoft SQL Server")
 S3method(get_catalog,Id)
 S3method(get_catalog,default)
 S3method(get_catalog,tbl_dbi)
+S3method(get_connection,OdbcDriver)
+S3method(get_connection,PqDriver)
+S3method(get_connection,SQLiteDriver)
+S3method(get_connection,default)
+S3method(get_connection,duckdb_driver)
 S3method(get_schema,"Microsoft SQL Server")
 S3method(get_schema,"NULL")
 S3method(get_schema,Id)
