--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(db_timestamp,default)
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
 S3method(digest_to_checksum,tbl_PqConnection)
+S3method(digest_to_checksum,tbl_duckdb_connection)
 S3method(dplyr::anti_join,tbl_sql)
 S3method(dplyr::full_join,tbl_sql)
 S3method(dplyr::inner_join,tbl_sql)
