feat(get_schema/catalog): Add support for duckdb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(filter_keys,tbl_sql)
 S3method(get_catalog,"Microsoft SQL Server")
 S3method(get_catalog,Id)
 S3method(get_catalog,default)
+S3method(get_catalog,duckdb_connection)
 S3method(get_catalog,tbl_dbi)
 S3method(get_connection,OdbcDriver)
 S3method(get_connection,PqDriver)
@@ -30,6 +31,7 @@ S3method(get_schema,"NULL")
 S3method(get_schema,Id)
 S3method(get_schema,PqConnection)
 S3method(get_schema,SQLiteConnection)
+S3method(get_schema,duckdb_connection)
 S3method(get_schema,tbl_dbi)
 S3method(get_tables,"Microsoft SQL Server")
 S3method(get_tables,DBIConnection)
