feat(get_tables): Add support for duckdb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(get_tables,DBIConnection)
 S3method(get_tables,OdbcConnection)
 S3method(get_tables,PqConnection)
 S3method(get_tables,SQLiteConnection)
+S3method(get_tables,duckdb_connection)
 S3method(id,Id)
 S3method(id,character)
 S3method(id,data.frame)
