--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.character,Id)
 S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
+S3method(db_timestamp,duckdb_connection)
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
 S3method(digest_to_checksum,tbl_PqConnection)
