--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,12 @@ Title: Easily Access and Maintain Time-Based Versioned Data (Slowly-Changing-Dim
 Version: 0.4.0
 Authors@R:
 	  c(person("Rasmus Skytte", "Randl\U00F8v", , "rske@ssi.dk",
-	           role = c("aut", "cre"),
+	           role = c("aut", "cre", "rev"),
 	           comment = c(ORCID = "0000-0002-5860-3838")),
 	    person("Marcus Munch", "Gr\U00FCnewald", , ,
 	           role = c("aut"),
 	           comment = c(ORCID = "0009-0006-8090-406X")),
-        person("Lasse Engbo", "Christiansen", , "lsec@ssi.dk", role = c("ctb"),
+        person("Lasse Engbo", "Christiansen", , "lsec@ssi.dk", role = c("rev"),
              comment = c(ORCID = "0000-0001-5019-1931")),
 	    person("Statens Serum Institut",
 	           role = c("cph", "fnd")))
