--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 import(parallelly)
+importClassesFrom(DBI,DBIConnection)
 importFrom(R6,R6Class)
 importFrom(methods,setGeneric)
 importFrom(rlang,":=")
