hotfix(digest_to_checksum): Add missing @export to mssql digest_to_checksum

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(db_timestamp,"NULL")
 S3method(db_timestamp,SQLiteConnection)
 S3method(db_timestamp,default)
 S3method(db_timestamp,duckdb_connection)
+S3method(digest_to_checksum,"tbl_Microsoft SQL Server")
 S3method(digest_to_checksum,data.frame)
 S3method(digest_to_checksum,default)
 S3method(digest_to_checksum,tbl_PqConnection)
